[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/board/board.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/styles/styleboxempty.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/fonts/roboto_r_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/scenes/game/game_scene.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0901961, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0.780392, 0.780392, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.588235 )
border_color = Color( 0, 0, 0, 0 )

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 330, 410 )
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera2D" type="Camera2D" parent="Viewport"]
offset = Vector2( 165, 205 )
current = true

[node name="Panel" type="Panel" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 326.0
margin_bottom = 406.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameView" type="MarginContainer" parent="Viewport/MarginContainer/VBoxContainer"]
margin_left = 1.0
margin_right = 321.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBoard" type="Panel" parent="Viewport/MarginContainer/VBoxContainer/GameView"]
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Board" parent="Viewport/MarginContainer/VBoxContainer/GameView" instance=ExtResource( 1 )]
margin_right = 320.0
margin_bottom = 320.0

[node name="BoardBorder" type="Panel" parent="Viewport/MarginContainer/VBoxContainer/GameView"]
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="StartOverlay" type="Panel" parent="Viewport/MarginContainer/VBoxContainer/GameView"]
visible = false
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="TextOverlay" type="Label" parent="Viewport/MarginContainer/VBoxContainer/GameView/StartOverlay"]
margin_right = 328.0
margin_bottom = 319.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Viewport/MarginContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 322.0
margin_bottom = 328.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsView" type="MarginContainer" parent="Viewport/MarginContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 322.0
margin_bottom = 369.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Viewport/MarginContainer/VBoxContainer/StatsView"]
margin_left = 8.0
margin_right = 314.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Player" type="VBoxContainer" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_right = 39.0
margin_bottom = 37.0

[node name="PlayerText" type="Label" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer/Player"]
margin_right = 39.0
margin_bottom = 14.0
text = "Player"
valign = 1

[node name="PlayerValue" type="Label" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer/Player"]
margin_top = 18.0
margin_right = 39.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 43.0
margin_right = 260.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 4 )
custom_constants/separation = 8

[node name="Moves" type="VBoxContainer" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer"]
margin_left = 264.0
margin_right = 306.0
margin_bottom = 37.0

[node name="MoveText" type="Label" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_right = 42.0
margin_bottom = 14.0
text = "Moves"
align = 1
valign = 1

[node name="MoveValue" type="Label" parent="Viewport/MarginContainer/VBoxContainer/StatsView/HBoxContainer/Moves"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1

[node name="HSeparator2" type="HSeparator" parent="Viewport/MarginContainer/VBoxContainer"]
margin_top = 373.0
margin_right = 322.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="game_started" from="Viewport/MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="Viewport/MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="Viewport/MarginContainer/VBoxContainer/GameView/Board" to="." method="_on_Board_moves_updated"]
